fix words overflowing borders

--- a/css/cards.css
+++ b/css/cards.css
@@ -42,4 +42,5 @@
   font-size: 60%;
   text-align: center;
   width: 25%;
+  word-break: break-word;
 }
